--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@capacitor/camera": "^4.1.4",
+    "@codetrix-studio/capacitor-google-auth": "^3.2.2",
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
     "ionicons": "^6.0.3",
