--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@codetrix-studio/capacitor-google-auth": "^3.2.2",
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
+    "firebase": "^9.19.1",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
