--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "@angular/core": "^15.0.0",
     "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.0.0",
-    "@angular/platform-browser": "^15.0.0",
+    "@angular/platform-browser": "^15.2.7",
     "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
+    "@angular/router": "^15.2.7",
     "@capacitor/camera": "^4.1.4",
     "@codetrix-studio/capacitor-google-auth": "^3.2.2",
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
     "firebase": "^9.19.1",
     "ionicons": "^6.0.3",
+    "moment": "^2.29.4",
     "rxjs": "~7.5.0",
+    "swiper": "^9.2.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
